--- a/facts.html
+++ b/facts.html
@@ -109,27 +109,27 @@
   
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/adsadadsdas.jpg" alt="Populasyon ng Myanmar"> <!-- Replace with your image path -->
+    <img src="adsadadsdas.jpg" alt="Populasyon ng Myanmar"> <!-- Replace with your image path -->
     <p class="fact-text">1. Ang Myanmar ay may populasyon na humigit-kumulang 55 milyon.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/sadadasdasasd.jpeg" alt="Wikang Burmese"> <!-- Replace with your image path -->
+    <img src="sadadasdasasd.jpeg" alt="Wikang Burmese"> <!-- Replace with your image path -->
     <p class="fact-text">2. Ang opisyal na wika ng Myanmar ay Burmese, na ginagamit ng karamihan ng populasyon.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/12.jpg" alt="Kultura ng Myanmar"> <!-- Replace with your image path -->
+    <img src="12.jpg" alt="Kultura ng Myanmar"> <!-- Replace with your image path -->
     <p class="fact-text">3. Kilala ang Myanmar sa mayamang kultura at tradisyon na may malaking impluwensiya mula sa Budismo.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/123.jpeg" alt="Pagbabago ng Pangalan"> <!-- Replace with your image path -->
+    <img src="123.jpeg" alt="Pagbabago ng Pangalan"> <!-- Replace with your image path -->
     <p class="fact-text">4. Ang Myanmar ay dating kilala bilang Burma at nagkaroon ng pagbabago sa pangalan noong 1989.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/1234.jpg" alt="Shwedagon Pagoda"> <!-- Replace with your image path -->
+    <img src="1234.jpg" alt="Shwedagon Pagoda"> <!-- Replace with your image path -->
     <p class="fact-text">5. Ang bansa ay tahanan ng Shwedagon Pagoda, isa sa mga pinaka-sagradong lugar ng mga Budista sa buong mundo.</p>
   </div>
 
