--- a/tourism.html
+++ b/tourism.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Myanmar Text', Arial, sans-serif;
-      background-image: url('file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/20160802-myanmar-tourism.jpeg'); /* Replace with your background image path */
+      background-image: url('20160802-myanmar-tourism.jpeg'); /* Replace with your background image path */
       background-size: cover;
       background-position: center;
       margin: 0;
@@ -107,17 +107,17 @@
   
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/Bagan-Temples.jpg" alt="Bagan">
+    <img src="Bagan-Temples.jpg" alt="Bagan">
     <p class="fact-text">1. Ang Bagan ay isa sa mga pinakamalaking atraksyon sa Myanmar, na kilala sa mga sinaunang templo at kahanga-hangang tanawin.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/inle%20lake.jpg" alt="Inle Lake">
+    <img src="inle%20lake.jpg" alt="Inle Lake">
     <p class="fact-text">2. Ang Inle Lake ay tanyag sa mga turista dahil sa mga kakaibang tradisyon ng mga mangingisda at ang mga tahanang itinayo sa ibabaw ng lawa.</p>
   </div>
 
   <div class="fact">
-    <img src="file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/pagoda.jpg" alt="Shwedagon Pagoda">
+    <img src="pagoda.jpg" alt="Shwedagon Pagoda">
     <p class="fact-text">3. Ang Shwedagon Pagoda sa Yangon ay isang dambana ng mga Budista at isa sa mga pinakabanal na lugar sa Myanmar.</p>
   </div>
 
