--- a/Credits.html
+++ b/Credits.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Myanmar Text', Arial, sans-serif;
-      background-image: url('file:///C:/Users/MAUWIN24/Desktop/coding%20ang%20stuff/FIL%20PT%20website/Monywa-City-in-Sagaing-region-on-the-river-Chindwin-Myanmar-Ultra-HD-Wallpaper-for-Desktop-mobile-phones-and-laptops-3840x2400-840x525.png'); /* Replace with your background image path */
+      background-image: url('Monywa-City-in-Sagaing-region-on-the-river-Chindwin-Myanmar-Ultra-HD-Wallpaper-for-Desktop-mobile-phones-and-laptops-3840x2400-840x525.png'); /* Replace with your background image path */
       background-size: cover; /* Ensures the image covers the entire screen */
       background-position: center; /* Centers the background image */
       background-repeat: no-repeat; /* Prevents tiling */
