--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Myanmar Text', Arial, sans-serif;
-      background-image: url('https://images.pexels.com/photos/1089288/pexels-photo-1089288.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Replace with your background image path */
+      background-image: url('MYANMARDARKNIGHt.jpg'); /* Replace with your background image path */
       background-size: cover; /* Ensures the image covers the entire screen */
       background-position: center; /* Centers the background image */
       background-repeat: no-repeat; /* Prevents tiling */
