--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: 'Myanmar Text', Arial, sans-serif;
-      background-image: url('MYANMARDARKNIGHT.jpg'); /* Replace with your background image path */
+      background-image: url('yagoon.jpg'); /* Replace with your background image path */
       background-size: cover; /* Ensures the image covers the entire screen */
       background-position: center; /* Centers the background image */
       background-repeat: no-repeat; /* Prevents tiling */
