--- a/credits.html
+++ b/credits.html
@@ -92,8 +92,9 @@
 
   <div class="credits-content">
     <h1>Credits</h1>
-    <p>All images and information are sourced from various resources including books, online articles, and databases about Myanmar.</p>
-    <p>Project by: Group 2</p>
+    <p>All images and information are sourced from various resources including books, online articles, and databases about Myanmar.
+    ang mga gumawa ng pananaliksik ay sina Cruz A, Hipolito, at Alaba</p>
+    <p>Project by: Group 2 : Vince Thaddeus L. de la Cruz, Chrys Austin Cruz Jr., Shane Hipolito, matthew Alaba</p>
   </div>
 
 </body>
